--- a/Labs/Scripts/lab6_retailer_eda.ipynb
+++ b/Labs/Scripts/lab6_retailer_eda.ipynb
@@ -94,12 +94,12 @@
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "ArrSX1XdCbnL",
-        "outputId": "d74e1c9c-97f6-4091-d8ea-16eecef7509f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "ArrSX1XdCbnL",
+        "outputId": "d74e1c9c-97f6-4091-d8ea-16eecef7509f"
       },
       "outputs": [
         {
@@ -424,11 +424,11 @@
         "df.columns"
       ],
       "metadata": {
-        "id": "iYIRg7JLDpp8",
-        "outputId": "c41d98bc-96fa-4601-dd42-b4569e718cfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iYIRg7JLDpp8",
+        "outputId": "c41d98bc-96fa-4601-dd42-b4569e718cfa"
       },
       "execution_count": 5,
       "outputs": [
@@ -450,69 +450,42 @@
     {
       "cell_type": "code",
       "source": [
-        "df['order_type'].value_counts()"
+        "df.info()"
       ],
       "metadata": {
-        "id": "WlEonDgxDvHd",
-        "outputId": "7a41170b-0ae3-4074-fbde-b0dfcff38eb7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 178
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WlEonDgxDvHd",
+        "outputId": "43dc07d9-2dc7-4ad2-f665-e5262f2b08e6"
       },
-      "execution_count": 22,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "order_type\n",
-              "Retail    29582\n",
-              "Online    26461\n",
-              "Name: count, dtype: int64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>order_type</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>Retail</th>\n",
-              "      <td>29582</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Online</th>\n",
-              "      <td>26461</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> int64</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 56043 entries, 0 to 56042\n",
+            "Data columns (total 13 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   order_id          56043 non-null  int64  \n",
+            " 1   order_date        56011 non-null  object \n",
+            " 2   order_year_month  56011 non-null  object \n",
+            " 3   customer_name     56043 non-null  object \n",
+            " 4   city              55569 non-null  object \n",
+            " 5   state_province    55569 non-null  object \n",
+            " 6   email             56043 non-null  object \n",
+            " 7   order_type        56043 non-null  object \n",
+            " 8   quantity          56004 non-null  float64\n",
+            " 9   product_name      56043 non-null  object \n",
+            " 10  product_line      56043 non-null  object \n",
+            " 11  product_price     56043 non-null  float64\n",
+            " 12  product_status    56043 non-null  object \n",
+            "dtypes: float64(2), int64(1), object(10)\n",
+            "memory usage: 5.6+ MB\n"
+          ]
         }
       ]
     },
@@ -534,15 +507,186 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "OTO7_xqlCbnM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OTO7_xqlCbnM",
+        "outputId": "249f0a98-cc36-4ed1-f1eb-2c31cf9bc51f"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-65-640d72b61ba0>:5: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_clean['order_date'] = pd.to_datetime(df_clean['order_date'])\n",
+            "<ipython-input-65-640d72b61ba0>:6: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_clean['order_year_month'] = pd.to_datetime(df_clean['order_year_month'])\n",
+            "<ipython-input-65-640d72b61ba0>:9: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_clean['product_status'] = df_clean['product_status'].astype('category')\n",
+            "<ipython-input-65-640d72b61ba0>:10: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_clean['order_type'] = df_clean['order_type'].astype('category')\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Check for outliers. Remove any outliers that appear to be mistakes\n",
+        "df_clean = df[(df['order_date'] < '2024-06-30') & (df['order_year_month'] < '2024-06')]\n",
+        "\n",
+        "# Convert any numbers into the correct datatype if they are not already numeric\n",
+        "df_clean['order_date'] = pd.to_datetime(df_clean['order_date'])\n",
+        "df_clean['order_year_month'] = pd.to_datetime(df_clean['order_year_month'])\n",
+        "\n",
+        "# Convert any character variables in to factors if they are appropriate for that datatype\n",
+        "df_clean['product_status'] = df_clean['product_status'].astype('category')\n",
+        "df_clean['order_type'] = df_clean['order_type'].astype('category')\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_clean['product_status'] = df_clean['product_status'].astype('category')\n",
+        "df_clean['product_status']"
+      ],
+      "metadata": {
+        "id": "t0NHAxpnesgQ",
+        "outputId": "d53a250e-fafa-4edd-f1b9-274b4c170726",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 569
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-64-39233c92385a>:1: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_clean['product_status'] = df_clean['product_status'].astype('category')\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        Active\n",
+              "1        Active\n",
+              "2        Active\n",
+              "3        Active\n",
+              "4        Active\n",
+              "          ...  \n",
+              "56023    Active\n",
+              "56024    Active\n",
+              "56025    Active\n",
+              "56026    Active\n",
+              "56027    Active\n",
+              "Name: product_status, Length: 50617, dtype: category\n",
+              "Categories (2, object): ['Active', 'Not Active']"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>product_status</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56023</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56024</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56025</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56026</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56027</th>\n",
+              "      <td>Active</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>50617 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> category</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
     },
     {
       "cell_type": "markdown",
