--- a/Labs/Scripts/lab6_retailer_eda.ipynb
+++ b/Labs/Scripts/lab6_retailer_eda.ipynb
@@ -507,47 +507,146 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 67,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 991
         },
         "id": "OTO7_xqlCbnM",
-        "outputId": "249f0a98-cc36-4ed1-f1eb-2c31cf9bc51f"
+        "outputId": "f689dcf7-5259-42e5-cb3b-95426db11ed8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-65-640d72b61ba0>:5: SettingWithCopyWarning: \n",
+            "<ipython-input-67-a6f4b7a07283>:5: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df_clean['order_date'] = pd.to_datetime(df_clean['order_date'])\n",
-            "<ipython-input-65-640d72b61ba0>:6: SettingWithCopyWarning: \n",
+            "<ipython-input-67-a6f4b7a07283>:6: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df_clean['order_year_month'] = pd.to_datetime(df_clean['order_year_month'])\n",
-            "<ipython-input-65-640d72b61ba0>:9: SettingWithCopyWarning: \n",
+            "<ipython-input-67-a6f4b7a07283>:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df_clean['product_status'] = df_clean['product_status'].astype('category')\n",
-            "<ipython-input-65-640d72b61ba0>:10: SettingWithCopyWarning: \n",
+            "<ipython-input-67-a6f4b7a07283>:10: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_clean['order_type'] = df_clean['order_type'].astype('category')\n"
+            "  df_clean['order_type'] = df_clean['order_type'].astype('category')\n",
+            "<ipython-input-67-a6f4b7a07283>:13: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_clean.dropna(inplace = True)\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        1949.97\n",
+              "1        2599.96\n",
+              "2        3249.95\n",
+              "3         649.99\n",
+              "4         649.99\n",
+              "          ...   \n",
+              "56038     914.62\n",
+              "56039     914.62\n",
+              "56040     914.62\n",
+              "56041     914.62\n",
+              "56042     914.62\n",
+              "Name: total_amount, Length: 56043, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>total_amount</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1949.97</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2599.96</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3249.95</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>649.99</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>649.99</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56038</th>\n",
+              "      <td>914.62</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56039</th>\n",
+              "      <td>914.62</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56040</th>\n",
+              "      <td>914.62</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56041</th>\n",
+              "      <td>914.62</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56042</th>\n",
+              "      <td>914.62</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>56043 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
         }
       ],
       "source": [
@@ -561,7 +660,13 @@
         "# Convert any character variables in to factors if they are appropriate for that datatype\n",
         "df_clean['product_status'] = df_clean['product_status'].astype('category')\n",
         "df_clean['order_type'] = df_clean['order_type'].astype('category')\n",
-        "\n"
+        "\n",
+        "# Remove rows with empty (NULL) value\n",
+        "df_clean.dropna(inplace = True)\n",
+        "\n",
+        "# Create a total_amount variable, based on the product price and quantity\n",
+        "df['total_amount'] = df['product_price'] * df['quantity']\n",
+        "df['total_amount']\n"
       ]
     },
     {
@@ -571,12 +676,12 @@
         "df_clean['product_status']"
       ],
       "metadata": {
-        "id": "t0NHAxpnesgQ",
-        "outputId": "d53a250e-fafa-4edd-f1b9-274b4c170726",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 569
-        }
+        },
+        "id": "t0NHAxpnesgQ",
+        "outputId": "d53a250e-fafa-4edd-f1b9-274b4c170726"
       },
       "execution_count": 64,
       "outputs": [
