--- a/Labs/Scripts/lab8_megatelco_data_prep.ipynb
+++ b/Labs/Scripts/lab8_megatelco_data_prep.ipynb
@@ -103,11 +103,11 @@
       "execution_count": 7,
       "metadata": {
         "id": "6_FwprxVgR0e",
-        "outputId": "594d06d6-b29b-4bf8-9091-2233c1a55c8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "outputId": "594d06d6-b29b-4bf8-9091-2233c1a55c8a"
       },
       "outputs": [
         {
@@ -528,11 +528,11 @@
       "execution_count": 8,
       "metadata": {
         "id": "7KXLvMcBK8Za",
-        "outputId": "3c145399-9060-4790-ce21-95cc6f2d8e4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "outputId": "3c145399-9060-4790-ce21-95cc6f2d8e4c"
       },
       "outputs": [
         {
@@ -956,10 +956,10 @@
       "execution_count": 9,
       "metadata": {
         "id": "xNDR1xg5dVzm",
-        "outputId": "c2acd4d9-1853-4469-95f1-81b25a498ef2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c2acd4d9-1853-4469-95f1-81b25a498ef2"
       },
       "outputs": [
         {
@@ -983,10 +983,10 @@
       "execution_count": 10,
       "metadata": {
         "id": "cw6i_45td0JC",
-        "outputId": "3c67eb86-6338-4f1e-f285-bb3a0467eeb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3c67eb86-6338-4f1e-f285-bb3a0467eeb5"
       },
       "outputs": [
         {
@@ -1009,10 +1009,10 @@
       "execution_count": 11,
       "metadata": {
         "id": "YhFAu2W4dz_6",
-        "outputId": "e860afe7-e6d1-42bb-f615-e2ce01d46f07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e860afe7-e6d1-42bb-f615-e2ce01d46f07"
       },
       "outputs": [
         {
@@ -1035,10 +1035,10 @@
       "execution_count": 12,
       "metadata": {
         "id": "rmJbiN8rdzxJ",
-        "outputId": "9d1a508d-c8c5-4a5e-9e2c-b5bb2bb22296",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9d1a508d-c8c5-4a5e-9e2c-b5bb2bb22296"
       },
       "outputs": [
         {
@@ -1061,11 +1061,11 @@
       "execution_count": 13,
       "metadata": {
         "id": "gvMekcKg4y5X",
-        "outputId": "42bb495d-8ea4-41b3-c899-2d890e6c3481",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 383
-        }
+        },
+        "outputId": "42bb495d-8ea4-41b3-c899-2d890e6c3481"
       },
       "outputs": [
         {
@@ -1611,13 +1611,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 20,
       "metadata": {
         "id": "inCqTVMDt6ex",
-        "outputId": "bef21eb2-8ed4-4e72-edc2-f79bb2d87b12",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6088babf-5b1e-4360-e161-343b4c3b79a4"
       },
       "outputs": [
         {
@@ -1626,7 +1626,7 @@
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "Index: 10412 entries, 0 to 14998\n",
-            "Data columns (total 16 columns):\n",
+            "Data columns (total 18 columns):\n",
             " #   Column                       Non-Null Count  Dtype   \n",
             "---  ------                       --------------  -----   \n",
             " 0   college                      10412 non-null  category\n",
@@ -1645,8 +1645,10 @@
             " 13  leave                        10412 non-null  category\n",
             " 14  id                           10412 non-null  int64   \n",
             " 15  operating_system             10412 non-null  object  \n",
-            "dtypes: category(5), float64(1), int64(9), object(1)\n",
-            "memory usage: 1.0+ MB\n"
+            " 16  leave_flag                   10412 non-null  int64   \n",
+            " 17  Income_Level                 10412 non-null  category\n",
+            "dtypes: category(6), float64(1), int64(10), object(1)\n",
+            "memory usage: 1.1+ MB\n"
           ]
         }
       ],
@@ -1691,10 +1693,10 @@
       "execution_count": 15,
       "metadata": {
         "id": "bC93rEgNfFNh",
-        "outputId": "07eb497e-c3fc-4fa5-971d-33d7351c217d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "07eb497e-c3fc-4fa5-971d-33d7351c217d"
       },
       "outputs": [
         {
@@ -1744,12 +1746,12 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "DOhGT-fCAFOh",
-        "outputId": "464e7046-c239-4266-84a2-a7de41f55d2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 459
-        }
+        },
+        "id": "DOhGT-fCAFOh",
+        "outputId": "464e7046-c239-4266-84a2-a7de41f55d2d"
       },
       "outputs": [
         {
@@ -1855,13 +1857,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
-        "id": "kX8yGh5pAFOh"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 147
+        },
+        "id": "kX8yGh5pAFOh",
+        "outputId": "a6d640bd-7fbc-4bd4-e494-ec4aa7c6a9a5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "High_Risk\n",
+              "1    10412\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>High_Risk</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>10412</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ],
       "source": [
-        "#high risk"
+        "#high risk\n",
+        "#df_clean['High_Risk'] = df_clean['reported_satisfaction'].replace(2,0)\n",
+        "#df_clean['High_Risk'] = df_clean['High_Risk'].replace(3,0)\n",
+        "df_clean['High_Risk'] = df_clean.loc[df_clean['reported_satisfaction'] == 2, 'High_Risk'] = 0\n",
+        "df_clean['High_Risk'] = df_clean.loc[df_clean['reported_satisfaction'] == 3, 'High_Risk'] = 0\n",
+        "df_clean['High_Risk'] = df_clean.loc[df_clean['reported_satisfaction'] == 1, 'High_Risk'] = 1\n",
+        "\n",
+        "df_clean['High_Risk'] = df_clean['High_Risk'].astype('category')\n",
+        "df_clean['High_Risk'].value_counts()"
       ]
     },
     {
