--- a/Labs/Scripts/lab8_megatelco_data_prep.ipynb
+++ b/Labs/Scripts/lab8_megatelco_data_prep.ipynb
@@ -1857,14 +1857,88 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "source": [
+        "df_clean['reported_satisfaction'].value_counts()"
+      ],
+      "metadata": {
+        "id": "8_rUSAdZnq42",
+        "outputId": "d8b87667-9108-431b-dbe4-d5ac7a2834fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 210
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "reported_satisfaction\n",
+              "1    7561\n",
+              "3    2347\n",
+              "2     504\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>reported_satisfaction</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>7561</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2347</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>504</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 147
         },
         "id": "kX8yGh5pAFOh",
-        "outputId": "a6d640bd-7fbc-4bd4-e494-ec4aa7c6a9a5"
+        "outputId": "3263dee1-b8f0-44ad-8702-cf5e23ad3302"
       },
       "outputs": [
         {
@@ -1872,7 +1946,7 @@
           "data": {
             "text/plain": [
               "High_Risk\n",
-              "1    10412\n",
+              "0    10412\n",
               "Name: count, dtype: int64"
             ],
             "text/html": [
@@ -1903,7 +1977,7 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
+              "      <th>0</th>\n",
               "      <td>10412</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -1912,7 +1986,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 46
         }
       ],
       "source": [
@@ -1921,7 +1995,7 @@
         "#df_clean['High_Risk'] = df_clean['High_Risk'].replace(3,0)\n",
         "df_clean['High_Risk'] = df_clean.loc[df_clean['reported_satisfaction'] == 2, 'High_Risk'] = 0\n",
         "df_clean['High_Risk'] = df_clean.loc[df_clean['reported_satisfaction'] == 3, 'High_Risk'] = 0\n",
-        "df_clean['High_Risk'] = df_clean.loc[df_clean['reported_satisfaction'] == 1, 'High_Risk'] = 1\n",
+        "#df_clean['High_Risk'] = df_clean.loc[df_clean['reported_satisfaction'] == 1, 'High_Risk'] = 1\n",
         "\n",
         "df_clean['High_Risk'] = df_clean['High_Risk'].astype('category')\n",
         "df_clean['High_Risk'].value_counts()"
